# clio

./: .gitignore  Dockerfile  README.md  db.py  docker-compose.yml  main.py  pyproject.toml  ticker.py  zzz.py
app/: api_config.py  app.py  db.py  db_actions.py  db_config.py  db_ops.py  entity.py  main.py  news_entity.py  test_entity.py  zzz.py
