[project]
name = "clio"
version = "0.1.0"
description = "Stock Sentiment API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "slowapi>=0.1.9",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.6.0",
    "ruff>=0.9.6",
]
